--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store=classpath:certificate.p12
 #server.ssl.key-store-password=test
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testjpa
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=1234
+
+#spring.jpa.hibernate.ddl-auto=create
